// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectInspector passes \`nodeRenderer\` prop to <TreeView/> 1`] = `
<li
  aria-expanded={false}
  role="treeitem"
  style={
    Object {
      "backgroundColor": "white",
      "boxSizing": "border-box",
      "color": "black",
      "cursor": "default",
      "fontFamily": "Menlo, monospace",
      "fontSize": "11px",
      "lineHeight": "14px",
      "listStyle": "none",
    }
  }
  title={undefined}
>
  <TreeView
    dataIterator={[Function]}
    nodeRenderer={[Function]}
    theme="chromeLight"
  />
</li>
`;

exports[`ObjectInspector should render 1`] = `
<li
  aria-expanded={false}
  role="treeitem"
  style={
    Object {
      "backgroundColor": "white",
      "boxSizing": "border-box",
      "color": "black",
      "cursor": "default",
      "fontFamily": "Menlo, monospace",
      "fontSize": "11px",
      "lineHeight": "14px",
      "listStyle": "none",
    }
  }
  title={undefined}
>
  <TreeView
    dataIterator={[Function]}
    nodeRenderer={[Function]}
    theme="testvalue"
  />
</li>
`;
